--- a/python_testing.ipynb
+++ b/python_testing.ipynb
@@ -120,9 +120,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#! Doc strings\n",
-    "#! Jit compile\n",
-    "#! Errors exist here\n",
     "def loss_function(odeint, args):\n",
     "    \"\"\"\n",
     "    The bayesian error of the loss function. \n",
@@ -143,6 +140,24 @@
     "    SDC14 = np.array([*miyake.sig_d14c], dtype=np.float64)      # JAx array for manipulation \n",
     "    simulation += np.mean(DC14[1:4])                            # Adding the offset \n",
     "    return - 0.5 * np.sum(((DC14 - simulation) / SDC14) ** 2)   # Log likelhood as chi-squared "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = np.array([0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0])   # Months of the year to select \n",
+    "mask = np.hstack((mask for i in range(30)))             # Mask values for the run period (years)\n",
+    "\n",
+    "simulation = ode.odeint(dydx, u0, np.arange(760.0, 790.0, 1 / 12), parameters)[:, 2]    # Running the simulation \n",
+    "\n",
+    "simulation = np.where(mask, x=simulation, y=np.zeros(30 * 12))  # Selecting intersting values\n",
+    "simulation = np.take(simulation, np.nonzero(simulation)[0])     # Getting the nonzero elements\n",
+    "simulation = np.reshape(simulation, (30, 6))                    # Shaping for the correct means \n",
+    "simulation = np.mean(simulation, axis=1)[0:28]                  # Yearly mean via axis \n",
+    "simulation = 1000 * (simulation - u0[2]) / u0[2]            # Deviations from initial "
    ]
   },
   {
