Determining the ideal production function

--- a/peak_hunting.ipynb
+++ b/peak_hunting.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ticktack\n",
-    "import jax.numpy\n",
+    "import jax.numpy as np\n",
     "import pandas"
    ]
   },
@@ -47,7 +47,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So the data contains underlying trends that I want to remove "
+    "So the data contains underlying trends that I want to remove so that I can get a better picture of the signal to noise ratio. I might start of by fitting the ideal event. I can do this using the infrastructure that Q has put in place."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'SingleFitter' object has no attribute 'MarkovChainSampler'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-7deaa5a99587>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mbayesian_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprepare_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"simple sinusoid\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdefault_params\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m775.\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1.\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2.\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m81.\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m bayesian_model.MarkovChainSampler(default_params, \n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mlikelihood\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbayesian_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog_joint_simple_sinusoid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mburnin\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m500\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mproduction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     args = (np.array([770., 0., -np.pi, 0.]), np.array([780., 5., np.pi, 15.])))\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'SingleFitter' object has no attribute 'MarkovChainSampler'"
+     ]
+    }
+   ],
+   "source": [
+    "bayesian_model = ticktack.fitting.SingleFitter(cbm)\n",
+    "bayesian_model.load_data(\"Miyake12.csv\", num_offset=4)\n",
+    "bayesian_model.prepare_function(model=\"simple sinusoid\")\n",
+    "default_params = np.array([775., 1./12, np.pi/2., 81./12])\n",
+    "bayesian_model.MarkovChainSampler(default_params, \n",
+    "    likelihood = bayesian_model.log_joint_simple_sinusoid, burnin = 500, production = 1000, \n",
+    "    args = (np.array([770., 0., -np.pi, 0.]), np.array([780., 5., np.pi, 15.])))"
    ]
   },
   {
