Switching to manual mode after ticktack error

--- a/peak_hunting.ipynb
+++ b/peak_hunting.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ticktack\n",
     "import jax.numpy as np\n",
-    "import pandas"
+    "import pandas\n",
+    "from scipy.optimize import minimize"
    ]
   },
   {
@@ -20,27 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DeviceArray([1.34891419e+02, 7.09608715e+02, 1.19175523e+03,\n",
-       "             3.97248139e+00, 4.51603166e+04, 1.55628969e+02,\n",
-       "             6.34361837e+02, 4.23744476e+02, 1.80840828e+03,\n",
-       "             6.65960790e+02, 7.34880254e+03], dtype=float64)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cbm = ticktack.load_presaved_model(\"Guttler14\", production_rate_units=\"atoms/cm^2/s\")\n",
     "cbm.compile()\n",
-    "cbm.equilibrate(production_rate=1.88)"
+    "transfer_operator = cbm._matrix\n",
+    "equilibrium = cbm.equilibrate(production_rate=1.88)"
    ]
   },
   {
@@ -52,29 +40,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'SingleFitter' object has no attribute 'MarkovChainSampler'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-7deaa5a99587>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mbayesian_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprepare_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"simple sinusoid\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdefault_params\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m775.\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1.\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2.\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m81.\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m bayesian_model.MarkovChainSampler(default_params, \n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mlikelihood\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbayesian_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog_joint_simple_sinusoid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mburnin\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m500\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mproduction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     args = (np.array([770., 0., -np.pi, 0.]), np.array([780., 5., np.pi, 15.])))\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'SingleFitter' object has no attribute 'MarkovChainSampler'"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def production(t):\n",
+    "    return 1.88 + 0.18 * 1.88 * np.sin(2 * np.pi / 11 + 1.25) + \\\n",
+    "        120 * np.exp(- (12 * (t - 775)) ** 16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "bayesian_model = ticktack.fitting.SingleFitter(cbm)\n",
-    "bayesian_model.load_data(\"Miyake12.csv\", num_offset=4)\n",
-    "bayesian_model.prepare_function(model=\"simple sinusoid\")\n",
-    "default_params = np.array([775., 1./12, np.pi/2., 81./12])\n",
-    "bayesian_model.MarkovChainSampler(default_params, \n",
-    "    likelihood = bayesian_model.log_joint_simple_sinusoid, burnin = 500, production = 1000, \n",
-    "    args = (np.array([770., 0., -np.pi, 0.]), np.array([780., 5., np.pi, 15.])))"
+    "bayesian_model.load_data(\"Miyake12.csv\", num_offset=4)"
    ]
   },
   {
