--- a/peak_hunting.ipynb
+++ b/peak_hunting.ipynb
@@ -65,61 +65,34 @@
    "outputs": [],
    "source": [
     "cbm = ticktack.load_presaved_model(\"Guttler14\", production_rate_units=\"atoms/cm^2/s\")\n",
-    "cbm.compile()\n",
-    "model, steady_state = cbm.run(sample_times, annual_samples, \n",
-    "    production=prod, steady_state_production=1.88, args=params)"
+    "cbm.compile()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [],
    "source": [
-    "troposphere = cbm.bin_data( # Bins the data into annual values\n",
-    "    model[:, 2],   # Selecting only the years that I have data for \n",
-    "    annual_samples,                         # Number of samples per year \n",
-    "    sample_times,                           # Times to return the binned values for \n",
-    "    growth_bools                            # Boolean mask of growth seasons\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "miyake = pandas.read_csv(\"Miyake12.csv\", sep=\" \")\n",
+    "def log_likelhood(params):\n",
+    "    miyake = pandas.read_csv(\"Miyake12.csv\", sep=\" \")   # Reading the data from the Miyake 2012\n",
+    "    DC14 = array([*miyake.d14c])                        # JAX array for manipulation\n",
+    "    SDC14 = array([*miyake.sig_d14c])                   # JAx array for manipulation \n",
     "\n",
-    "troposphere = 1000 * (troposphere - steady_state[2]) / steady_state[2]\n",
-    "troposphere = troposphere + mean(array([*miyake[\"d14c\"][0:4]]))\n",
+    "    model, steady_state = cbm.run(sample_times, annual_samples,     # Running the carbon box model\n",
+    "        production=prod, steady_state_production=1.88, args=params)\n",
     "\n",
-    "plt.figure(\"Model\")\n",
-    "plt.plot(sample_times[-31:-1], troposphere[-31:-1])\n",
-    "plt.scatter(miyake[\"year\"], miyake[\"d14c\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "times = arange(760.0, 790.0, 0.01)  # The times that are sampled\n",
-    "production = prod(times, *params)   # Production that is sampled \n",
-    "\n",
-    "plt.plot(times, production)         # A visualisation."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def log_likelhood():\n",
-    "    return - 0.5 * sum(((DC14 - simulation) / SDC14) ** 2)   # Log likelhood as chi-squared"
+    "    troposphere = cbm.bin_data( # Bins the data into annual values\n",
+    "        model[:, 2],    # Selecting only the years that I have data for \n",
+    "        annual_samples, # Number of samples per year \n",
+    "        sample_times,   # Times to return the binned values for \n",
+    "        growth_bools    # Boolean mask of growth seasons\n",
+    "    )\n",
+    "    \n",
+    "    troposphere = troposphere[-29:-1]   # slicing only the period of interest \n",
+    "    troposphere = 1000 * (troposphere - steady_state[2]) / steady_state[2]  # Normalising the data \n",
+    "    troposphere = troposphere + mean(array([*miyake[\"d14c\"][0:4]])) # Offseting the data to match \n",
+    "    return - 0.5 * sum(((DC14 - troposphere) / SDC14) ** 2)   # Log likelhood as chi-squared"
    ]
   },
   {
@@ -133,11 +106,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 418,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "incompatible input dimensions (1, 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-418-9d8ca4569de5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mhello_bayes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0memcee\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEnsembleSampler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlog_likelhood\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mstate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhello_bayes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_mcmc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/emcee/ensemble.py\u001b[0m in \u001b[0;36mrun_mcmc\u001b[0;34m(self, initial_state, nsteps, **kwargs)\u001b[0m\n\u001b[1;32m    441\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    442\u001b[0m         \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 443\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mresults\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minitial_state\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miterations\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnsteps\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    444\u001b[0m             \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    445\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/emcee/ensemble.py\u001b[0m in \u001b[0;36msample\u001b[0;34m(self, initial_state, log_prob0, rstate0, blobs0, iterations, tune, skip_initial_state_check, thin_by, thin, store, progress, progress_kwargs)\u001b[0m\n\u001b[1;32m    306\u001b[0m         \u001b[0mstate_shape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoords\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    307\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mstate_shape\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnwalkers\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 308\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"incompatible input dimensions {state_shape}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    309\u001b[0m         if (not skip_initial_state_check) and (\n\u001b[1;32m    310\u001b[0m             \u001b[0;32mnot\u001b[0m \u001b[0mwalkers_independent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoords\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: incompatible input dimensions (1, 5)"
+     ]
+    }
+   ],
    "source": [
-    "emcee.EnsembleSampler(10, 5, )"
+    "hello_bayes = emcee.EnsembleSampler(10, 5, log_likelhood)\n",
+    "state = hello_bayes.run_mcmc(params, 100)"
    ]
   },
   {
