Working implementation and planning

--- a/peak_hunting.ipynb
+++ b/peak_hunting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
     "    return where(condition, p[3], 0.0)\n",
     "\n",
     "def prod(t, *args):\n",
-    "    amplitude, phase, start, end, height = args\n",
+    "    amplitude, phase, start, end, height = tuple(args)\n",
     "    sine_params = array([amplitude, phase])\n",
     "    rect_params = array([start, end, height])\n",
     "    return sine(t, sine_params) + rect(t, rect_params)"
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,47 +70,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import emcee\n",
-    "from numpy import random"
+    "mcmc_model = ticktack.fitting.SingleFitter(cbm)\n",
+    "mcmc_model.load_data(\"Miyake12.csv\")\n",
+    "mcmc_model.prepare_function(model=prod)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running burn-in...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [00:15<00:00,  6.40it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "initial = params\n",
-    "ndim, nwalkers = len(initial), 2 * len(initial)\n",
-    "sampler = emcee.EnsembleSampler(nwalkers, ndim, log_likelihood)\n",
-    "\n",
-    "print(\"Running burn-in...\")\n",
-    "p0 = initial + 1e-5 * random.rand(nwalkers, ndim)\n",
-    "p0, lp, _ = sampler.run_mcmc(p0, 1000, progress=True)\n",
-    "\n",
-    "print(\"Running production...\")\n",
-    "sampler.reset()\n",
-    "sampler.run_mcmc(p0, 500, progress=True)\n",
-    "sampler.flatchain"
+    "sampler = mcmc_model.MarkovChainSampler(params, likelihood = mcmc_model.log_likelihood)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = [\"Amplitude ($atoms/cm^2/s$)\", \"Phase (yr)\", \"Start Date (yr)\", \"End Date (yr)\", \"Height ($atoms/cm^2/s$)\"]\n",
+    "fig = mcmc_model.chain_summary(sampler, 20, labels=labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mcmc_model.plot_recovery(sampler, 20)"
    ]
   },
   {
@@ -125,6 +119,20 @@
    "metadata": {},
    "source": [
     "The next step is to minimize the $\\chi^{2}$. After working so hard to get the `mcmc` I'm going to try and use this. The problem is because I was not using ticktack I can now immensly simplify the code by using the `SingleFitter` implementations provided by Q."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To minimize the $\\chi^{2}$ statistic I will need to isolate the data before the event and use this to determine the $\\sin$ parameters. This is going to require modifications to the `prod` function and also will require a better understanding of the plotting backend."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It will be easiest to modify the file."
    ]
   }
  ],
