Finalization of rough draft and tool familiarisation

--- a/peak_hunting.ipynb
+++ b/peak_hunting.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ticktack\n",
     "import pandas\n",
-    "from jax.numpy import arange, sin, pi, array, mean, greater, less, equal, where\n",
+    "from jax.numpy import arange, sin, pi, array, greater, less, equal, where, mean\n",
+    "from jax import jacrev, grad\n",
     "from scipy.optimize import minimize\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,14 +49,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "annual_samples = 48                  # 4 samples per month\n",
     "sample_times = arange(-360.0, 790.0)  # Times at which to collect samples\n",
     "growth_bools = array([0.0, 0.0, 0.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0.0, 0.0, 0.0])\n",
-    "params = (1.0, 1.25, 774, 775, 20.0)"
+    "params = array([1.0, 1.25, 772.0, 775.0, 40.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cbm = ticktack.load_presaved_model(\"Guttler14\", production_rate_units=\"atoms/cm^2/s\")\n",
+    "cbm.compile()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "miyake = pandas.read_csv(\"Miyake12.csv\", sep=\" \")   # Reading the data from the Miyake 2012\n",
+    "DC14 = array([*miyake.d14c])                        # JAX array for manipulation\n",
+    "SDC14 = array([*miyake.sig_d14c])                   # JAx array for manipulation "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So below is where I minimize the $\\chi^{2}$ statistic using an ODE integration style approach."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def log_likelihood(params): \n",
+    "    model, steady_state = cbm.run(sample_times, annual_samples,     # Running the carbon box model\n",
+    "        production=prod, steady_state_production=1.88, args=params)\n",
+    "\n",
+    "    troposphere = cbm.bin_data( # Bins the data into annual values\n",
+    "        model[:, 2],    # Selecting only the years that I have data for \n",
+    "        annual_samples, # Number of samples per year \n",
+    "        sample_times,   # Times to return the binned values for \n",
+    "        growth_bools    # Boolean mask of growth seasons\n",
+    "    )\n",
+    "    \n",
+    "    troposphere = troposphere[-29:-1]   # slicing only the period of interest \n",
+    "    troposphere = 1000 * (troposphere - steady_state[2]) / steady_state[2]  # Normalising the data \n",
+    "    troposphere = troposphere + mean(array([*miyake[\"d14c\"][0:4]])) # Offseting the data to match \n",
+    "    return 0.5 * sum(((DC14 - troposphere) / SDC14) ** 2)   # Log likelhood as chi-squared"
    ]
   },
   {
@@ -64,8 +116,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cbm = ticktack.load_presaved_model(\"Guttler14\", production_rate_units=\"atoms/cm^2/s\")\n",
-    "cbm.compile()"
+    "minimize(log_likelihood, params, method='Nelder-Mead', options={'disp': True})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 13125.811198\n",
+      "         Iterations: 7\n",
+      "         Function evaluations: 76\n",
+      "         Gradient evaluations: 63\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "      fun: 13125.81119771305\n",
+       " hess_inv: array([[1.72623680e-01, 6.83015026e-04, 0.00000000e+00, 0.00000000e+00,\n",
+       "        0.00000000e+00],\n",
+       "       [6.83015026e-04, 1.30490598e-03, 0.00000000e+00, 0.00000000e+00,\n",
+       "        0.00000000e+00],\n",
+       "       [0.00000000e+00, 0.00000000e+00, 1.00000000e+00, 0.00000000e+00,\n",
+       "        0.00000000e+00],\n",
+       "       [0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 1.00000000e+00,\n",
+       "        0.00000000e+00],\n",
+       "       [0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
+       "        1.00000000e+00]])\n",
+       "      jac: array([ 0.06198596, -5.44565391,  0.        ,  0.        ,  0.        ])\n",
+       "  message: 'Desired error not necessarily achieved due to precision loss.'\n",
+       "     nfev: 76\n",
+       "      nit: 7\n",
+       "     njev: 63\n",
+       "   status: 2\n",
+       "  success: False\n",
+       "        x: array([ 10.77749084,   1.96963468, 772.        , 775.        ,\n",
+       "        40.        ])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "minimize(log_likelihood, params, method='BFGS', jac=grad(log_likelihood), options={'disp': True})\n"
    ]
   },
   {
@@ -132,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It will be easiest to modify the file."
+    "It will be easiest to modify the file. It is nice I must say to have got fucking nowhere all day. I'm going to go and pack now after merging these changes on github."
    ]
   }
  ],
